Fixed issues that prevented test from running

--- a/app/assets/stylesheets/components/_multi-select.scss
+++ b/app/assets/stylesheets/components/_multi-select.scss
@@ -31,7 +31,7 @@
 
 
 .multi-select-tag-remove {
-  @extend .icon-trash.mini;
+  @extend .icon-trash.mini !optional;
   opacity: $opacity-medium;
 
   &:hover {
