Destroy media_file and actual files when media_entry is destroyed
Squashed commit of the following:

commit fd023bbcf07a7c453bdb5e91e25d294c810d1992
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jul 22 14:25:01 2013 +0200

    Added feature test for deleting a media_entry, media_file and actual file

commit aae395ca07360d2c6fb413e8c71215f543482b68
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jul 22 10:20:32 2013 +0200

    Use destroy instead of delete in relation

commit e0885da3e81268141efe9b8880d0d549e6bb5383
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jul 22 09:15:49 2013 +0200

    Try to fix eager loading

commit 36d03c759f8cb686f84cceb88c837b0d86fee4d2
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jul 22 09:10:48 2013 +0200

    Reverted eager loading of files for media_resources

commit ab14f5c40a7242b6cf26a549c3cc36c392ba322c
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jul 19 17:03:56 2013 +0200

    Try to reenable eager loading with includes

commit 18a491dc019bcaf546a1c258072d2affe0662279
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jul 19 14:03:13 2013 +0200

    Dependent delete for media_resource to media_file, use after_commit,  and a fix

commit 5e6108a07525994559e1e0dbee812040b0231867
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Jul 17 14:07:31 2013 +0200

    Disambiguate select statement

commit 2b4af2331c2d7e07ba479b51c044484b35149be4
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Jul 17 13:42:03 2013 +0200

    Filter MediaEntry instead of MediaResource when we want Entries

commit 19f334d468e4b3aaf30603fa06fddf9d65002389
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Jul 17 13:20:32 2013 +0200

    media_entries of media_resources switches the type in rails aware manner

commit 4eaf00f4898e168d7a14f75463867c350a88c390
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Jul 17 10:22:31 2013 +0200

    Fix removed has_many :media_entries in media_file an one usage

commit a40d47f8f76fd55

--- a/app/views/app_admin/dashboard/index.html.haml
+++ b/app/views/app_admin/dashboard/index.html.haml
@@ -28,7 +28,7 @@
     %tr
       %td #{FilterSet.count} FilterSets
     %tr 
-      %td=  MediaFile.where("NOT EXISTS (#{MediaEntry.where('media_file_id = media_files.id').to_sql})").count.to_s + " MediaFiles without MediaEntry"
+      %td=  MediaFile.where("media_entry_id IS NULL").count.to_s + " MediaFiles without MediaEntry"
     %tr
       %td
         = MediaFile.joins(:media_entry).incomplete_encoded_videos.count
