--- a/app/views/search/term.html.haml
+++ b/app/views/search/term.html.haml
@@ -48,7 +48,7 @@
 
           = render :partial => "media_resources/list/toolbar", 
                    :locals => {:title => _("Search result"),
-                               :subtitle => _("%d content elements" % @result_count_for_term)}
+                               :subtitle => _(%Q[<span id="result_count">%d</span> content elements] % @result_count_for_term)}
 
           = render :partial => "media_resources/list/filterbar"
 
