[REAMING] Medienarchiv und MAdeK

--- a/app/assets/javascripts/views/groups/edit.tmpl.haml
+++ b/app/assets/javascripts/views/groups/edit.tmpl.haml
@@ -26,8 +26,9 @@
     .form-body.phm
       .ui-form-group.rowed
         %label.form-label
+          //# TODO INTERNATIONALIZE
           Person hinzufügen
-          %small Es können nur Personen ausgewählt werden, die sich schon einmal im Medienarchiv eingeloggt haben.
+          %small Es können nur Personen ausgewählt werden, die sich schon einmal in dieses System eingeloggt haben.
 
           .form-item.mts
             %input.block#add-user{:type => "text", :placeholder => "Name der Person", :autofocus => :autofocus}
