--- a/app/views/application/_login.html.haml
+++ b/app/views/application/_login.html.haml
@@ -18,7 +18,8 @@
         - if @app_settings["welcome_subtitle"]
           = @app_settings["welcome_subtitle"]
         - else
-          Das Medienarchiv ist eine Plattform zum gemeinschaftlichen Arbeiten mit Medien und Teilen von Inhalten.
+          // TODO INTERNATIONALIZE
+          Diese Plattform dient dem gemeinschaftlichen Arbeiten mit Medien und dem Teilen von Inhalten.
   .col1of3
     .pitch-login
       %ul.ui-tabs.ui-container
