--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -3,6 +3,7 @@
 
   %head
     %meta{:charset => 'utf-8'}
+    // TODO INTERNATIONALIZE
     %title= @app_settings.title || "Medienarchiv"
     = stylesheet_link_tag "application"
     %link{:href => "/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}
