--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -9,7 +9,7 @@
 
     %p.ui-footer-copy
       = link_to "http://madek.zhdk.ch" do 
-        = image_tag "inserts/image-logo-madek.png", :alt => "Madek - Medienarchiv der Künste", :class => "ui-footer-logo"
+        = image_tag "inserts/image-logo-madek.png", :alt => _("Madek - Media Archive of the Arts"), :class => "ui-footer-logo"
       Z&uuml;rcher Hochschule der K&uuml;nste and contributors
 
 - if clipboard
