Managing media-sets in the admin interface
Squashed commit of the following:

commit 2d16b44220de67dba53930b4a763339decff3cfc
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Sep 6 16:09:59 2013 +0200

    Fix feature test admin_previews

commit 5af9f952de2bcbd7755479cc24cb786bddf385cd
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Sep 6 15:20:54 2013 +0200

    Finished media_set in the admin interface

commit 49b6ba3451840d14b48d472a0e90e9687e24bd92
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Sep 6 08:50:09 2013 +0200

    Going on with managing individual contexts

commit bf7a2b9bbb84425caf9d9fceb6fd427cdee2c25e
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Sep 6 08:49:27 2013 +0200

    Legible code

commit 9a33f926bbe459c2f22604c90ee818bcede2d26a
Author: Thomas Schank <DrTom@schank.ch>
Date:   Thu Sep 5 23:10:50 2013 +0200

    Towards managing meta contexts

commit e3b5812083243f3d57cbeba08e40e449cc4922e2
Author: Thomas Schank <DrTom@schank.ch>
Date:   Thu Sep 5 22:13:33 2013 +0200

    Delete media_wet with all children

commit 6f2b4babca4e4c4c1dff3c9349828572a2acc32c
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Sep 3 13:26:59 2013 +0200

    Admin meta-sets showing stuff

commit bce11010e791fcd68280b76df5972968e745aa90
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Sep 3 13:15:12 2013 +0200

    Admin media-set: showing group and userpermissions

commit 5e4ef29c638d7c854fb6e7c95e6c44a28e1d201e
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Sep 3 11:11:11 2013 +0200

    Extended search to title

commit db7caead91b80eab6f5d40314cc4c3e78f5adf97
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Sep 3 10:32:31 2013 +0200

    Added MediaSets in the new admin interface, including search

--- a/app/views/app_admin/media_entries/show.html.haml
+++ b/app/views/app_admin/media_entries/show.html.haml
@@ -1,4 +1,4 @@
-%h1 Media Entry #{@media_entry.id}
+%h1 Media-Entry #{@media_entry.id}
 
 %table.table.table-striped
   %thead
@@ -11,10 +11,10 @@
       - else
         %td= value
   %tr
-    %td Media file
+    %td Media-File
     %td
       = link_to app_admin_media_file_path(@media_entry.media_file) do
-        MediaFile: #{@media_entry.media_file.id}
+        Media-File: #{@media_entry.media_file.id}
 
 
 
