--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -48,6 +48,11 @@
                   = link_to app_admin_media_entries_path do
                     %i.icon-file
                     Media Entries
+                %li
+                  = link_to app_admin_media_sets_path do
+                    %i.icon-media-sets
+                    Media Sets
+
 
 
             %li.dropdown
