Fix show ZencoderJobs for audio files in new admin interface

--- a/app/views/app_admin/media_files/show.html.haml
+++ b/app/views/app_admin/media_files/show.html.haml
@@ -28,7 +28,7 @@
       - else
         %td= value
 
-- if @media_file.media_type =~ /video/
+- if @media_file.media_type =~ /video|audio/
   %h3 
     %i.image-film
     ZencoderJobs
