Permissions refactoring, intermediate for deploy on test
Squashed commit of the following:

commit 74af8d048a68098662b47ed91b2f981c5eb7a45d
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Oct 25 16:00:30 2013 +0200

    Permissions refactoring, intermediate for deploy on test

commit abf0f59bc48c0b1dc2b8d5cab1c3035795b237a0
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Oct 25 15:59:39 2013 +0200

    Showing numbers in of resources edit permissions and responsibilities

commit bb6bc8a903199f4f6b5d40d44f528d0d81555fc5
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Oct 25 15:20:21 2013 +0200

    Added transfer responsibility to media resource actions

commit c5406ad72558f83fd0c61099e637b56dafc58cea
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Oct 25 15:08:35 2013 +0200

    Removed feature tests wrt permissions and responsibility

commit 95ba22a181ece27c3c6a573e11799d76ce7bb468
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Oct 25 14:23:38 2013 +0200

    Finished removing of ownership from permissions javascript stuff

commit 094b113b6840fc81cf7e4e4da646fab81260c1e5
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Oct 25 14:17:34 2013 +0200

    Removing ownership from permission views

commit 739c83719ffd594fd516735fc797b4ef7473ae19
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Oct 25 14:07:55 2013 +0200

    Fixed some specs wrt. ownershipt and loging when getting users

    via the so calle API

commit ded0ad497523782ec6cd3395e6b8689d36f28852
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Oct 25 14:04:05 2013 +0200

    Styling

commit 52c5b7409c9fdbf5c2bfb97f9d7bba88c60bd449
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Oct 25 13:28:49 2013 +0200

    Removed transferring responsibility from permissions controller

commit 156772f79b0e7ae635d9a0310cd46cd257a66cf8
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Oct 25 12:58:13 2013 +0200

    Extended Userpermission.remove_irrelevant to owners permissions

commit 

--- a/app/assets/javascripts/views/permissions/index.tmpl.haml
+++ b/app/assets/javascripts/views/permissions/index.tmpl.haml
@@ -1,70 +1,66 @@
 %div{:class => "ui-rights-management{{if $item.manageable == false}} unmanageable{{/if}}{{if public[0].view == true}} public-view{{/if}}{{if public[0].download == true}} public-download{{/if}}{{if public[0].edit == true}} public-edit{{/if}}"}
 
-  .ui-modal-toolbar.top.phm.mrs
+
+  .mrx
+
+    %table.ui-rights-group.block.borderless
+
+      %thead
+        %tr
+          %td.ui-rights-user-title
+          %td.ui-rights-role-title  ${_jed('Permission')}
+          %td.ui-rights-check-title ${_jed('View')}
+          %td.ui-rights-check-title ${_jed('Download original')}
+          %td.ui-rights-check-title ${_jed('Edit')}
+          %td.ui-rights-check-title ${_jed('Edit permissions')}
+
+
+  .ui-rights-management-users
+
+    %h4.title-s.mts.separated.mbx
+      ${_jed('People')}
+      %i.icon-privacy-private-alt
+
+    .ui-rights-body
+
+      %table.ui-rights-group.bordered.block
+       
+        %tbody
+          {{tmpl(users, {presets: presets, manageable: $item.manageable}) App.renderPath("permissions/line")}}
+
+      {{if $item.manageable}}
+      #addUser.ui-add-subject.ptx.row
+        .col2of3
+          %input.small.block{name: 'user', type: 'text', placeholder:  "${_jed('Name of the person')}"}
+      {{/if}}
+
+
+  .ui-rights-management-groups
+
+    %h4.title-s.mts.separated.mbx
+      ${_jed('Groups')}
+      %i.icon-privacy-group-alt
+
+    .ui-rights-body
+
+      %table.ui-rights-group.bordered.block
+       
+        %tbody
+          {{tmpl(groups, {presets: presets, manageable: $item.manageable}) App.renderPath("permissions/line")}}
+
+      {{if $item.manageable}}
+      #addGroup.ui-add-subject.ptx.row
+        .col2of3
+          %input.small.block{type: :text, placeholder: "${_jed('Name of the group')}", name: 'group'}
+      {{/if}}
+
+
+  .ui-rights-management-public.mtx
 
     .mrx
 
-      %table.ui-rights-group.block.borderless
-
-        %thead
-          %tr
-            %td.ui-rights-user-title
-            %td.ui-rights-owner-title ${_jed('Responsible person')}
-            %td.ui-rights-role-title  ${_jed('Permission')}
-            %td.ui-rights-check-title ${_jed('View')}
-            %td.ui-rights-check-title ${_jed('Download original')}
-            %td.ui-rights-check-title ${_jed('Edit')}
-            %td.ui-rights-check-title ${_jed('Edit permissions')}
-
-  .ui-modal-body
-
-    .ui-rights-management-users
-
-      %h4.title-s.mts.separated.mbx
-        ${_jed('People')}
-        %i.icon-privacy-private-alt
-
-      .ui-rights-body
-
-        %table.ui-rights-group.bordered.block
-         
-          %tbody
-            {{tmpl(users, {presets: presets, manageable: $item.manageable, currentUserOwnership: currentUserOwnership}) App.renderPath("permissions/line")}}
-
-        {{if $item.manageable}}
-        #addUser.ui-add-subject.ptx.row
-          .col2of3
-            %input.small.block{name: 'user', type: 'text', placeholder:  "${_jed('Name of the person')}"}
-        {{/if}}
-
-
-    .ui-rights-management-groups
-
-      %h4.title-s.mts.separated.mbx
-        ${_jed('Groups')}
-        %i.icon-privacy-group-alt
-
-      .ui-rights-body
-
-        %table.ui-rights-group.bordered.block
-         
-          %tbody
-            {{tmpl(groups, {presets: presets, manageable: $item.manageable, currentUserOwnership: currentUserOwnership}) App.renderPath("permissions/line")}}
-
-        {{if $item.manageable}}
-        #addGroup.ui-add-subject.ptx.row
-          .col2of3
-            %input.small.block{type: :text, placeholder: "${_jed('Name of the group')}", name: 'group'}
-        {{/if}}
-
-  .ui-modal-toolbar.bottom.phm.mrs
-
-    .ui-rights-management-public.mtx
-
-      .mrx
-
-        %table.ui-rights-group.borderless.block
-         
-          %tbody
-            {{tmpl(public, {public: true, presets: presets, manageable: $item.manageable, currentUserOwnership: currentUserOwnership}) App.renderPath("permissions/line")}}
-      
+      %table.ui-rights-group.borderless.block
+       
+        %tbody
+          {{tmpl(public, {public: true, presets: presets, manageable: $item.manageable}) App.renderPath("permissions/line")}}
+    
